--- a/Todo List App/src/index.css
+++ b/Todo List App/src/index.css
@@ -90,7 +90,7 @@ ol li {
   align-items: center;
 }
 
-.todo_style .fa_times {
+.todo_style .fa-times {
   width: 20px;
   height: 20px;
   display: flex;
@@ -103,11 +103,11 @@ ol li {
   box-shadow: 5px 5px 15px -5px rgba(0,0,0,0.3);
 }
 
-.todo_style .fa_times:hover{
+.todo_style .fa-times:hover{
   background-color: crimson;
 }
 
-.todo_style .fa_times:hover .list_style{
+.todo_style .fa-times:hover .list_style{
   color: crimson;
 }
 
@@ -115,7 +115,7 @@ ol li {
   .center_div{
     width: 55%;
   }
-  .todo_style .fa_times{
+  .todo_style .fa-times{
     margin: 0 15px 0 15px;
     display: flex;
     justify-content: center;
